Some comment here.

--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -27,3 +27,8 @@
 {% else %}
 <div class="entry-content">{{ content }}</div>
 {% endif %}
+
+
+{% if site.duoshuo_short_name and page.comments != false and post.comments != false and site.duoshuo_comments == true %}
+| <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#comments">Comments</a>
+{% endif %}
