--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -41,3 +41,11 @@ single: true
   {% endif %}
 </aside>
 {% endunless %}
+
+<!-- 多说评论 -->
+{% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %}
+<section>
+    <h1>Comments</h1>
+    <div id="comments" aria-live="polite">{% include post/duoshuo.html %}</div>
+</section>
+{% endif %}
