--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -40,3 +40,11 @@ layout: default
   {% endif %}
 </aside>
 {% endunless %}
+
+<!-- 多说评论 -->
+{% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %}
+<section>
+    <h1>Comments</h1>
+    <div id="comments" aria-live="polite">{% include post/duoshuo.html %}</div>
+</section>
+{% endif %}
