Some comment here.

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -17,3 +17,15 @@ background-image: none;
 //background: #F5F5D5;
 //background: url("/images/bg.jpg");
 }
+
+
+//倒圆角
+@media only screen and (min-width: 1040px) {
+body > nav {
+@include border-top-radius(.4em);
+}
+
+body > footer {
+@include border-bottom-radius(.4em);
+}
+}
