--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,4 @@
 <p>
   Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
-  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
+  <span class="credit">Preview in <a href="https://al1020119.github.io">iCocos</a></span>
 </p>
