Some comment here.

--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -30,5 +30,5 @@
 
 
 {% if site.duoshuo_short_name and page.comments != false and post.comments != false and site.duoshuo_comments == true %}
-| <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#comments">Comments</a>
+| <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#comments">更多评论</a>
 {% endif %}
