--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -44,7 +44,7 @@ layout: default
 <!-- 多说评论 -->
 {% if site.duoshuo_short_name and site.duoshuo_comments == true and page.comments == true %}
 <section>
-    <h1>Comments</h1>
+    <h1>更多评论</h1>
     <div id="comments" aria-live="polite">{% include post/duoshuo.html %}</div>
 </section>
 {% endif %}
