Some comment here.

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -29,3 +29,28 @@ body > footer {
 @include border-bottom-radius(.4em);
 }
 }
+
+
+
+.oec2003right
+{
+background: #C3D9FF;
+height:120px;
+border:1px solid #BBBBBB;
+}
+
+.oec2003right a:link
+{
+color: #0057b6;
+text-decoration: none;
+}
+.oec2003right a:visited
+{
+color: #0057b6;
+text-decoration: none;
+}
+.oec2003right a:active,a:hover
+{
+color: #0057b6;
+text-decoration: underline;
+}
