Some comment here.

--- a/source/_includes/asides/category_list.html
+++ b/source/_includes/asides/category_list.html
@@ -1,6 +1,6 @@
 <section>
     <h1>文章分类</h1>
     <ul id="categories">
-        {% category_list %}
+        {%raw%}{% category_list %}{%endraw%} 
     </ul>
 </section>
