Some comment here.

--- a/source/_includes/asides/category_list.html
+++ b/source/_includes/asides/category_list.html
@@ -1,6 +1,10 @@
 <section>
     <h1>文章分类</h1>
     <ul id="categories">
-        {%raw%}{% category_list %}{%endraw%} 
+        {% for post in site.posts limit: site.category_list %}
+        <li class="post">
+            <a href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
+        </li>
+        {% endfor %}
     </ul>
 </section>
