Some comment here.

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,6 +2,6 @@
   <li><a href="{{ root_url }}/">首页</a></li>
   <li><a href="{{ root_url }}/blog/archives">归档</a></li>
   <li><a href="{{ root_url }}/icocos">iCocos</a></li>
-  <li><a href="{{ root_url }}/other">其他</a></li>
+  <li><a href="{{ root_url }}/other">随笔录</a></li>
   <li><a href="{{ root_url }}/about">关于</a></li>
 </ul>
