--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -10,7 +10,7 @@
         {% include post/date.html %}{{ time }}
         {% if site.disqus_short_name and page.comments != false and post.comments != false and site.disqus_show_comment_count == true %}
            | <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#disqus_thread"
-             data-disqus-identifier="{% if post.meta.disqus_id %}{{ post.meta.disqus_id }}{% else %}{{ site.url }}{{ post.url }}{% endif %}">评论</a>
+             data-disqus-identifier="{% if post.meta.disqus_id %}{{ post.meta.disqus_id }}{% else %}{{ site.url }}{{ post.url }}{% endif %}">Comments</a>
         {% endif %}
       </p>
     {% endunless %}
@@ -26,9 +26,4 @@
   {% endif %}
 {% else %}
 <div class="entry-content">{{ content }}</div>
-{% endif %}
-
-
-{% if site.duoshuo_short_name and page.comments != false and post.comments != false and site.duoshuo_comments == true %}
-| <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#comments">更多评论</a>
 {% endif %}
