--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,10 +1,3 @@
-<script>
-function addBlankTargetForLinks () {
-    $('a[href^="http"]').each(function(){
-                              $(this).attr('target', '_blank');
-                              });
-}
-$(document).bind('DOMNodeInserted', function(event) {
-             addBlankTargetForLinks();
-             });
-</script>
+<!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
+<link href="//fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+<link href="//fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
