--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,7 @@
 <ul class="main-navigation">
-  <li><a href="{{ root_url }}/">Blog</a></li>
-  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+  <li><a href="{{ root_url }}/">博文</a></li>
+  <li><a href="{{ root_url }}/blog/archives">归档</a></li>
+  <li><a href="{{ root_url }}/iCocos">iCocos</a></li>
+  <li><a href="{{ root_url }}/about">文章</a></li>
+  <li><a href="{{ root_url }}/other">其他</a></li>
 </ul>
