Some comment here.

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -2,7 +2,7 @@
 // Add styles here to make changes without digging in too much
 
 html {
-background: #555555 url("/images/backGroundImage.png");
+background: #555555 url("/images/bg3.jpg");
 //background: #555555;
 }
 
