Some comment here.

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -7,12 +7,12 @@ background: #555555 url("/images/bg3.jpg");
 }
 
 body > div {
-background-image: url("/images/bg3.jpg");
+background-image: none;
 //background: #F5F5D5
 } //侧边栏
 
 body > div > div { //文章内容
-background-image: url("/images/bg3.jpg");
+background-image: none;
 //background: #F5F5D5;
 //background: url("/images/bg.jpg");
 }
