--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -12,6 +12,9 @@
            | <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#disqus_thread"
              data-disqus-identifier="{% if post.meta.disqus_id %}{{ post.meta.disqus_id }}{% else %}{{ site.url }}{{ post.url }}{% endif %}">Comments</a>
         {% endif %}
+        {% if site.duoshuo_short_name and page.comments != false and post.comments != false and site.duoshuo_comments == true %}
+        |   <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#comments">Comments</a>
+        {% endif %}
       </p>
     {% endunless %}
   </header>
