--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,7 +1,4 @@
 <ul class="main-navigation">
-  <li><a href="{{ root_url }}/">博文</a></li>
-  <li><a href="{{ root_url }}/blog/archives">归档</a></li>
-  <li><a href="{{ root_url }}/icocos">iCocos</a></li>
-  <li><a href="{{ root_url }}/year">年终</a></li>
-  <li><a href="{{ root_url }}/other">其他</a></li>
+  <li><a href="{{ root_url }}/">Blog</a></li>
+  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
 </ul>
