--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,4 @@
 <p>
-  Copyright &copy; 2013 - {{ site.author }} -
-<span class="credit">welcome to <a href="http://al1020119.github.io">曹#黎</a></span>
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
